styles.css
@keyframes easing-in {
  0%   {left:-100px;}
  50%  {left:-50;}
  100% {left:0;}
}

@keyframes fadeIn {
0% { opacity: 0; left: -100px; }
100% { opacity: 1; left: 0; }
}

@-moz-keyframes fadeIn {
  0% { opacity: 0; left: -100px; }
  100% { opacity: 1; left: 0; }
}

@-webkit-keyframes fadeIn {
  0% { opacity: 0; left: -100px; }
  100% { opacity: 1; left: 0; }
}

@-o-keyframes fadeIn {
  0% { opacity: 0; left: -100px; }
  100% { opacity: 1; left: 0; }
}

body{
  font-family: 'Montserrat', sans-serif;
  overflow-x: hidden;
}

.navigation-bar{
  -webkit-transition: all 0.3s ease;
  -moz-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
  padding: 0 7% 0;
  opacity: 1;
}

.navbar-scroll{
  -webkit-transition: all 0.3s ease;
  -moz-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #1c2b68;
  border-bottom:  1px solid black;
  padding: 0 7% 0;
  opacity: 1;
}

.company_logo{
  height: 50px;
  margin-right: 2%;
}

.my-video {
  z-index: -1;
  position: absolute;
  left: 0;
  top: 0;
}


.title{
  position: relative;
  padding: 3% 15% 7%;
  width: 100%;
  overflow: hidden;
  animation: fadeIn 2s;
  -webkit-animation: fadeIn 2s;
  -moz-animation: fadeIn 2s;
  -o-animation: fadeIn 2s;
  -ms-animation: fadeIn 2s;
}

/*Navigation Bar*/


.navbar-brand {
    font-size: 2.5rem;
    font-weight: bold;
}

.nav-item {
    padding: 0 18px;

}

.nav-link {
    font-size: 1.2rem;
}

.container-fluid{
  padding: 0;
}

.download-button{
  margin-top: 3%;
}



.header-container{
  color: white;
}

.big-heading{
  margin-top: 17.5%;
  margin-bottom: 5%;
  font-size: 3rem;
}

.sub-text{
  font-family: 'Merriweather', serif;
  letter-spacing: 1px;
}

/* features  */

.features{
  margin-top: 5%;
  padding: 3% 5% 3%;
  text-align: center;
  background-color: white;
}

.power_bi{
  opacity: 0;
  position: relative;
}

.power_automate{
  opacity: 0;
  position: relative;
}

.power_apps{
  opacity: 0;
  position: relative;
}

.feature-image{
  width: 20%;
  margin-bottom: 5%;
}

.feature_heading{
  opacity: 0;
  position: relative;
  margin-bottom: 4%;
  font-size: 2rem;
}

.feat_subtitle{
  margin-top: 4%;
  font-weight: bold;
  opacity: 0;
  position: relative;
}

/* Services */

.services{
  padding: 5% 5% 0;
  background-color: #1c2b68;
  color: white;
}

.si-container{
  text-align: center;
}

.services-image{
  height: 75%;
}

.service-row{
  height: 400px;
}

/* Testimonials */
.testimonials{
  margin: 5% 5%;
  text-align: center;
}

.quote_heading{
  margin-bottom: 2%;
}

.quote_person{
  margin-top: 2%;
}

.company_logos{
  width: 15%;
  text-align: center;
}

/* Contact Us */

.contact_headings{
  margin-top: 5%;
  margin-bottom: 1%
}

.whatsapp-button{
  background-color: green;
}

.contact_us{
  padding: 5% 5% 2%;
  background-color: #1c2b68;
  color: white;
}

.form-group{
  margin: 3% 0;
}

.email_link{
  color: white;
}

.submit-button{
  margin-top: 3%;
  background-color: green;
}

.btn-secondary{
  background-color: #ff9500;
  color: black;
}


/* Footer */

.footer{
  background-color: #1c2b68;
  color: white;
  padding: 1%;
  text-align: center;
}

.linkedin-icon{
  font-size: 3rem;
}

.copyright{
  margin-top: 2%;
  margin-bottom: 0;
}


/* Example report page below */

.reports{
  text-align: center;
  padding: 3% 5%;
  background-color: #FFF;
}

.report_headings{
  margin: 2% 0;
}


/* about us page */
.aboutus{
  padding: 3% 5%;
  background-color: white;
}

.aboutus-heading{
  position: relative;
  text-align: center;
  margin-top: 2%;
  margin-bottom: 4%;
  animation: fadeIn 2s;
  -webkit-animation: fadeIn 1s;
  -moz-animation: fadeIn 1s;
  -o-animation: fadeIn 1s;
  -ms-animation: fadeIn 1s;
}

.who-copy{
  opacity: 0;
  animation-delay: 2s;
  position: relative;
  top: 50%;
  transform: translateY(35%);
}

.who-img{
  opacity: 0;
  position: relative;
}

.about-us-bottom{
  padding: 3% 5% 0;
}

.aboutus-ext{
  background-color: #1c2b68;
  color: white;
  }



/* Mobile view */

@media (max-width: 450px) {

  body{
    font-size: 1.2rem;
  }

}

/* tablet Screen size */

@media (max-width: 600px ) {

  .my-video{
    height: 100%;
  }

  .navbar-brand{
    font-size: 1.5rem;
  }

  .big-heading{
    font-size: 2rem;
  }

  .who-copy{
    text-align: center;
  }

  .about-us-bottom{
    text-align: center;
  }

}

/* Desktop Screen size */




/* XL Screen size */

@media (min-width: 1600px) {
  .features{
    margin-top: 9%;
  }

  .reports{
    padding: 1% 5% 3%;
  }
}


/* Animation */
.show{
  opacity: 1;
  animation: fadeIn 1s;
  -webkit-animation: fadeIn 1s;
  -moz-animation: fadeIn 1s;
  -o-animation: fadeIn 1s;
  -ms-animation: fadeIn 1s;
}

